2002-11-05  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix more misprints.

2002-11-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* fit.c (regress): Fix SF bug # 631323: spelling "occured" -->
 	"occurred".

2002-10-25  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* Makefile.in: Add stamp-h[0-9]* to distclean target.

2002-10-18  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/atariaes.trm, term/atarivdi.trm, term/be.trm,
	term/x11.trm: Fix a number of misprints.

2002-10-18  Don Taber  <dtaber@blackrat.risc.rockwell.com>

	* term/linux.trm(LINUX_setup): Make driver work with devfs.

2002-10-15  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* Makefile.in: Remove acconfig.h.

	* acconfig.h: File removed.

	* configure.in, stdfn.h: Change test for time_t in <time.h> to not
	require time_t define in config.h. This removes the need for acconfig.h.

	* term/metapost.trm: Add empty line in terminal documentation.

2002-09-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/gpic.trm (GPIC_linetype): Fix signed conversion problems
 	between size_t GPIC_NUMLINES and int linetype.  NOTE: this will
 	change linetypes for numbers above 4, because the border and axis
 	linetypes will no longer be re-used.  Add offset here already,
 	instead of doing it later.
	(GPIC_vector): Removed addition of offset from here.

	* graphics.c (boundary): Backport of div-by-zero fix for
 	key_entry_height from 3.8.

	* term/post.trm: Backport of Symbol-Oblique operand stacking bug
 	fix from 3.8.

2002-07-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/cgm.trm: Fixed option parsing bugs.

2002-05-17  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Various misprint fixes.

2002-05-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* internal.c (BAD_DEFAULT): Minor spelling correction in message.

2002-05-16  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* 0FAQ: Fix filename for gplotlib.
