@@ -59,6 +59,7 @@ CFLAGS1 = -Ff=256 -f -m$(MODEL) -w- -Z -3 -f287 -d -G -n. -v -y
 #      and #define ANSI_C!
 CFLAGS2 = -I$(TC)\include -DMSDOS=1 -DPC -DANSI_C -DREADLINE=1 -DHAVE_GETCWD -DHAVE_STRNICMP
 CFLAGS3 = -DHAVE_SLEEP -DEXTERN_ERRNO -DHAVE_STRING_H -DHAVE_VALUES_H -DHAVE_STRICMP
+CFLAGS4 = -DHAVE_TIME_H -DHAVE_TIME_T_IN_TIME_H
 
 # separate set of FLAGS (both CFLAGS and LDFLAGS for the doc2xxx tools:
 DOC2XXX_FLAGS = -Idocs -Iterm @cflags.tc -ml -L$(TC)\lib
@@ -139,6 +140,7 @@ cflags.tc: makefile.tc
 	echo  >cflags.tc $(CFLAGS1) 
 	echo >>cflags.tc $(CFLAGS2)
 	echo >>cflags.tc $(CFLAGS3)
+        echo >>cflags.tc $(CFLAGS4)
 
 
 
